hal/include/HAL/Digital.h

  void setCounterUpSourceEdge(void* counter_pointer, bool risingEdge, bool fallingEdge, int32_t *status);
  void clearCounterUpSource(void* counter_pointer, int32_t *status);
  void setCounterDownSourceWithModule(void* counter_pointer, uint8_t module, uint32_t pin,
									  bool analogTrigger, int32_t *status); // TODO: Without Module
  void setCounterDownSourceEdge(void* counter_pointer, bool risingEdge, bool fallingEdge, int32_t *status);
  void clearCounterDownSource(void* counter_pointer, int32_t *status);
  
  void setCounterUpDownMode(void* counter_pointer, int32_t *status);
  void setCounterExternalDirectionMode(void* counter_pointer, int32_t *status);
  void setCounterSemiPeriodMode(void* counter_pointer, bool highSemiPeriod, int32_t *status);
  void setCounterPulseLengthMode(void* counter_pointer, double threshold, int32_t *status);
  int32_t getCounterSamplesToAverage(void* counter_pointer, int32_t *status);
  void setCounterSamplesToAverage(void* counter_pointer, int samplesToAverage, int32_t *status);
  void startCounter(void* counter_pointer, int32_t *status);
  void stopCounter(void* counter_pointer, int32_t *status);
  void resetCounter(void* counter_pointer, int32_t *status);
  int32_t getCounter(void* counter_pointer, int32_t *status);