wpilibj/wpilibJava/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>void setCounterUpSourceEdge(void*, bool, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:49</i><br>
	 * @deprecated use the safer methods {@link #setCounterUpSourceEdge(com.sun.jna.Pointer, byte, byte, java.nio.IntBuffer)} and {@link #setCounterUpSourceEdge(com.sun.jna.Pointer, byte, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterUpSourceEdge(Pointer counter_pointer, byte risingEdge, byte fallingEdge, IntByReference status);
	/**
	 * Original signature : <code>void setCounterUpSourceEdge(void*, bool, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:49</i>
	 */
	public static native void setCounterUpSourceEdge(Pointer counter_pointer, byte risingEdge, byte fallingEdge, IntBuffer status);
	/**
	 * Original signature : <code>void clearCounterUpSource(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:50</i><br>
	 * @deprecated use the safer methods {@link #clearCounterUpSource(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #clearCounterUpSource(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void clearCounterUpSource(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>void clearCounterUpSource(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:50</i>
	 */
	public static native void clearCounterUpSource(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterDownSourceWithModule(void*, uint8_t, uint32_t, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:51</i><br>
	 * @deprecated use the safer methods {@link #setCounterDownSourceWithModule(com.sun.jna.Pointer, byte, int, byte, java.nio.IntBuffer)} and {@link #setCounterDownSourceWithModule(com.sun.jna.Pointer, byte, int, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterDownSourceWithModule(Pointer counter_pointer, byte module, int pin, byte analogTrigger, IntByReference status);
	/**
	 * Original signature : <code>void setCounterDownSourceWithModule(void*, uint8_t, uint32_t, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:51</i>
	 */
	public static native void setCounterDownSourceWithModule(Pointer counter_pointer, byte module, int pin, byte analogTrigger, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterDownSourceEdge(void*, bool, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:53</i><br>
	 * @deprecated use the safer methods {@link #setCounterDownSourceEdge(com.sun.jna.Pointer, byte, byte, java.nio.IntBuffer)} and {@link #setCounterDownSourceEdge(com.sun.jna.Pointer, byte, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterDownSourceEdge(Pointer counter_pointer, byte risingEdge, byte fallingEdge, IntByReference status);
	/**
	 * Original signature : <code>void setCounterDownSourceEdge(void*, bool, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:53</i>
	 */
	public static native void setCounterDownSourceEdge(Pointer counter_pointer, byte risingEdge, byte fallingEdge, IntBuffer status);
	/**
	 * Original signature : <code>void clearCounterDownSource(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:54</i><br>
	 * @deprecated use the safer methods {@link #clearCounterDownSource(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #clearCounterDownSource(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void clearCounterDownSource(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>void clearCounterDownSource(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:54</i>
	 */
	public static native void clearCounterDownSource(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterUpDownMode(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:55</i><br>
	 * @deprecated use the safer methods {@link #setCounterUpDownMode(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #setCounterUpDownMode(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterUpDownMode(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>void setCounterUpDownMode(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:55</i>
	 */
	public static native void setCounterUpDownMode(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterExternalDirectionMode(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:56</i><br>
	 * @deprecated use the safer methods {@link #setCounterExternalDirectionMode(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #setCounterExternalDirectionMode(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterExternalDirectionMode(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>void setCounterExternalDirectionMode(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:56</i>
	 */
	public static native void setCounterExternalDirectionMode(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterSemiPeriodMode(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:57</i><br>
	 * @deprecated use the safer methods {@link #setCounterSemiPeriodMode(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setCounterSemiPeriodMode(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterSemiPeriodMode(Pointer counter_pointer, byte highSemiPeriod, IntByReference status);
	/**
	 * Original signature : <code>void setCounterSemiPeriodMode(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:57</i>
	 */
	public static native void setCounterSemiPeriodMode(Pointer counter_pointer, byte highSemiPeriod, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterPulseLengthMode(void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:58</i><br>
	 * @deprecated use the safer methods {@link #setCounterPulseLengthMode(com.sun.jna.Pointer, float, java.nio.IntBuffer)} and {@link #setCounterPulseLengthMode(com.sun.jna.Pointer, float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterPulseLengthMode(Pointer counter_pointer, double threshold, IntByReference status);
	/**
	 * Original signature : <code>void setCounterPulseLengthMode(void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:58</i>
	 */
	public static native void setCounterPulseLengthMode(Pointer counter_pointer, double threshold, IntBuffer status);
	/**
	 * Original signature : <code>int32_t getCounterSamplesToAverage(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:59</i><br>
	 * @deprecated use the safer methods {@link #getCounterSamplesToAverage(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getCounterSamplesToAverage(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getCounterSamplesToAverage(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>int32_t getCounterSamplesToAverage(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:59</i>
	 */
	public static native int getCounterSamplesToAverage(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterSamplesToAverage(void*, int, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:60</i><br>
	 * @deprecated use the safer methods {@link #setCounterSamplesToAverage(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setCounterSamplesToAverage(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterSamplesToAverage(Pointer counter_pointer, int samplesToAverage, IntByReference status);
	/**
	 * Original signature : <code>void setCounterSamplesToAverage(void*, int, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:60</i>
	 */
	public static native void setCounterSamplesToAverage(Pointer counter_pointer, int samplesToAverage, IntBuffer status);
	/**
	 * Original signature : <code>void startCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:61</i><br>
	 * @deprecated use the safer methods {@link #startCounter(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #startCounter(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void startCounter(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>void startCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:61</i>
	 */
	public static native void startCounter(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void stopCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:62</i><br>
	 * @deprecated use the safer methods {@link #stopCounter(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #stopCounter(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void stopCounter(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>void stopCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:62</i>
	 */
	public static native void stopCounter(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void resetCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:63</i><br>
	 * @deprecated use the safer methods {@link #resetCounter(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #resetCounter(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void resetCounter(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>void resetCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:63</i>
	 */
	public static native void resetCounter(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>int32_t getCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:64</i><br>
	 * @deprecated use the safer methods {@link #getCounter(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getCounter(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getCounter(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>int32_t getCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:64</i>
	 */
	public static native int getCounter(Pointer counter_pointer, IntBuffer status);
